[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sixeyes"
version = "0.2.0"
description = "A Python library for quantitative analysis of volatility patterns and regime dynamics."
authors = [{ name = "Umer Farooq", email = "umerfarooq230@gmail.com" }]
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "numpy",
    "pandas"
]

[project.optional-dependencies]
dev = ["pytest", "matplotlib", "scipy", "statsmodels"]

[tool.setuptools.packages.find]
where = ["sixeyes"]